--- a/src/Ilcfrance/Worldspeak/Admin/FrontBundle/Resources/views/Trainee/edit.html.twig
+++ b/src/Ilcfrance/Worldspeak/Admin/FrontBundle/Resources/views/Trainee/edit.html.twig
@@ -529,7 +529,7 @@
                               <td>{{('TraineeNotif.type.'~n.type)|trans|raw}}
                               {%if n.type is constant('TYPE_EMAIL_24H_BEFORE_COURS', n)%}
                                       (<a href="{{path('Admin__trainee_edit_get', {'id': n.timeCredit.trainee.id})}}"><i class="fa fa-user"></i> {{ n.timeCredit.trainee.fullname }}</a> -
-                                       {{n.cours.dtStart|localizeddate('full', 'none', app.request.locale )|capitalize}} {{'_at'|trans}} {{n.cours.dtStart|localizeddate('long', 'none', app.request.locale)}})
+                                       {{n.cours.dtStart|localizeddate('full', 'none', app.request.locale )|capitalize}} {{'_at'|trans}} {{n.cours.dtStart|localizeddate('none', 'medium', app.request.locale)}})
                               {%endif%}
                               </td>
                               <td>{{n.dtStart|localizeddate('full', 'none', app.request.locale )}} {{'_at'|trans}} {{n.dtStart|localizeddate('none', 'long', app.request.locale )}}</td>
